# wtf-viz

./: .gitignore  ChangeLog.md  Makefile  README.md  stack.yaml  wtf-viz.cabal
apps/: Example.hs
cbits/: Interface.cpp  OgreFramework.cpp  OgreFramework.hpp  WtfViz2.cpp  WtfViz2.hpp
src/: WtfViz.hs
src/WtfViz/: FFI.hs  Object.hs
src/WtfViz/FFI/: FFI.hs  Keyboard.hs  Mouse.hs
