name:                wtf-viz
version:             2.0.0.0
synopsis:            3D visualizer based on Ogre3D
-- description:
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           Copyright (c) 2016, Greg Horn
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     WtfViz
                       WtfViz.Object
  other-modules:       WtfViz.FFI.FFI
                       WtfViz.FFI.Keyboard
                       WtfViz.FFI.Mouse

  other-extensions:    DeriveGeneric

  build-depends:       base >=4.8 && <5
                     , linear >=1.20

  hs-source-dirs:      src
  default-language:    Haskell2010
  c-sources:           cbits/Interface.cpp
                       cbits/OgreFramework.cpp
                       cbits/WtfViz2.cpp
--  includes:            cbits/OgreFramework.hpp
--                       cbits/WtfViz2.hpp
  extra-libraries:     stdc++, boost_system
  pkgconfig-depends:   OGRE, OGRE-Overlay, OIS
  cc-options: -Wall -Wextra -Werror -std=c++11
  ghc-options:         -Wall -Wextra -Werror

flag examples
    description:    build the examples
    default:        True

executable example
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      apps
  main-is:             Example.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.5 && < 5
                       , wtf-viz

  ghc-options:         -Wall -Wextra -Werror -threaded "-with-rtsopts=-T -N2"
